Support -R instead of --enable-preview and --add-modules.